add kotlin for sign up and first

--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -112,7 +112,7 @@
         android:layout_height="150px"
         android:layout_marginTop="48px"
         android:layout_marginLeft="138px"
-        android:src="@drawable/Phone"/>
+        android:src="@drawable/phone"/>
 
     <TextView
         android:layout_width="180px"
