--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -316,7 +316,8 @@
                 android:layout_height="150dp"
                 android:background="@drawable/edit_btn_home"
                 android:layout_marginTop="4226px"
-                android:layout_marginLeft="67dp" />
+                android:layout_marginLeft="67dp"
+                android:layout_marginBottom="500px"/>
 
             <view
                 android:layout_width="680px"
