--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,9 +19,11 @@
 
     <EditText
         android:id="@+id/txt_email"
+        android:textColor="@color/colorBlue"
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:background="@drawable/button_round"
+        android:textColorHint="@color/colorBlue"
         android:inputType="text"
         android:paddingLeft="10dp"
         android:layout_marginTop="100dp"
@@ -30,6 +32,7 @@
         android:hint="Email"/>
 
     <EditText
+        android:textColor="@color/colorBlue"
         android:id="@+id/txt_pass"
         android:layout_width="300dp"
         android:layout_height="40dp"
@@ -39,6 +42,7 @@
         android:paddingLeft="10dp"
         android:elevation="1dp"
         android:layout_gravity="center"
+        android:textColorHint="@color/colorBlue"
         android:hint="Password"/>
 
     <TextView
@@ -88,6 +92,7 @@
         android:clickable="true"/>
 
     <TextView
+        android:clickable="true"
         android:id="@+id/btnSignUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
